styles.css
/* ... */
/* -------------- */
/* form section */
/* -------------- */

.form__container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 90%;
    max-width: 1000px;
    transform: translate(-50%, -50%);
}

.form__container-inner-background {
    padding: 90px;
    background-color: rgba(0, 0, 0, 0.7);
    width: 80%;
    max-width: 800px;
}

.form__container-inner-background:hover {
    box-shadow: 5px 5px 2.2em rgb(255, 255, 255);
}

.form__title {
    display: flex;
    color: #ddd;
    font-size: 2.4em;
    text-shadow: 0 0 0.8em rgb(255, 255, 255);
    margin-bottom: 8%;
    text-decoration: underline;
}

.form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.form__field {
    width: 100%;
    padding: 30px 0;
    color: #ddd;
    font-size: 1.3rem;
    border: none;
    border-bottom: 1px solid rgb(255, 255, 255);
    background-color: transparent;
    margin-bottom: 4%;
    outline: none;
}

.form__field:hover {
    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.9);
}

::placeholder {
    color: #ddd;
    opacity: 0.7;
}

.form__button {
    margin-top: 10%;
    padding: 15px 30px;
    width: 50%;
    font-size: 1.2em;
    font-weight: bold;
    background-color: transparent;
    color: #ddd;
    border: 0.08em solid white;
    border-radius: 1.2em;
    text-shadow: 0 0 0.8em rgb(255, 255, 255);
    border-radius: 1.2em;
    transition: all 0.3s ease-in-out;
}

.form__button:hover {
    background-color: rgba(255, 255, 255, 0.8);
    color: #000;
    text-shadow: none;
    box-shadow: 0 0 1.3em rgb(255, 255, 255);
}

.social-media__container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 2%;
}
.social-media__icons {
    width: 35px;
    height: auto;
    display: block;
    margin: 5px;
    transition: transform 0.2s; /* Animation */
}

.social-media__icons:hover {
    box-shadow: 0 0 0.9em #fff;
    transform: scale(1.1);
}

/* -------------- */
/* Background Artist source */
/* -------------- */

.source__inner-background {
    background-color: rgba(0, 0, 0, 0.7);
    width: auto;
    padding: 15px;
    text-align: center;
    margin-top: auto;
}
.source__text {
    color: #ddd;
    font-size: 1.3rem;
}

.source__link {
    color: red;
}

/* -------------- */
/* Footer*/
/* -------------- */

footer {
    display: flex;
    padding: 25px 25px;
    background-color: rgba(0, 0, 0, 0.7);
    color: #ddd;
    justify-content: center;
    font-size: 1.5rem;
    margin-top: 0;
}

/* -------------- */
/* Mobile queries*/
/* -------------- */

/* for-phone-only */
@media (max-width: 599px) {
    ul {
        flex-direction: column;
    }
    a {
        font-size: 1em;
    }

    .hero-container {
        flex-direction: column;
        width: 100%;
        height: 100%;
    }

    .hero-title {
        font-size: 25x;
        margin-top: 5%;
    }
    .hero-message {
        text-align: left;
        font-size: 18px;
        max-width: 90%;
        margin: 0 auto;
        padding: 0 20px;
    }

    .hero-button {
        width: 20em;
        height: 3em;
        font-size: 18px;
        text-align: center;
    }
    .hero-image {
        width: 80vw;
    }

    .photo-credit {
        font-size: 1em;
        margin-top: 3%;
    }

    /* credits */

    .credit-text {
        font-size: 15px;
    }

    /* card section */

    .card-section__title {
        font-size: 1.4em;
        text-align: left;
        margin: 0 auto;
        padding: 0 20px;
        max-width: 100%;
        margin-top: 5%;
    }

    .card-section__grid {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
    }

    .card {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    .card__image {
        height: 100px;
        width: auto;
    }

    .card__text {
        text-align: center;
    }

    /* middle text */

    .character__quote {
        text-align: center;
        font-size: 1.5em;
    }

    .character {
        font-size: 1.5em;
    }
    /* Gallery section */

    .gallery__title {
        font-size: 2em;
    }

    .gallery__image-grid {
        grid-template-columns: repeat(3, 1fr);
    }

    .gallery__card-image {
        height: 100px;
        width: auto;
        gap: 2px;
    }
    .gallery__character-name {
        font-size: 1.4em;
        text-align: center;
    }
    .form__container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .form__container-inner-background {
        width: 100%;
    }
    .form__title {
        font-size: 2.2em;
    }

    .form__field {
        font-size: 1em;
    }

    .form__button {
        width: 90%;
        font-size: 1em;
    }
    .social-media__icons {
        width: 25px;
        height: auto;
    }
}

/* for-tablet-portrait-up */
@media (min-width: 600px) {
}
/* for-tablet-landscape-up */
@media (min-width: 900px) {
}

/* for-desktop-up */
@media (min-width: 1200px) {
}

/* for-medium-desktop-up */
@media (min-width: 1400px) {
}

/* for-big-desktop-up */
@media (min-width: 1800px) {
}

